--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "csp2-b546-pulido-david",
   "version": "1.0.0",
-  "main": "index.js",
+  "type":"commonjs",
+  "main": "lambda.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +15,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aws-serverless-express": "^3.4.0",
     "bcrypt": "^6.0.0",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
